# mateon-ai

./: .env.example  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
demo/: app.py
docs/: api-contract-draft.md  backend-integration-team-embedding.md  backend-integration-team-to-user.md  backend-integration-user-to-team.md  openapi.json
prompts/: contest_image_extraction.txt  judge_generated_text.txt  portfolio_summary.txt  recommendation_reason.txt  team_soft_fields_extraction.txt  team_to_user_proposal.txt  user_intent_chat_reply.txt  user_intent_extraction.txt  user_to_team_proposal.txt
scripts/: generate_team_fixtures.py  generate_user_fixtures.py  judge_outputs.py
tests/: test_contest_extraction_endpoint.py  test_contest_extraction_service.py  test_contest_extraction_validation.py  test_live_embedding_similarity.py  test_live_intent_chat_reply.py  test_live_judge.py  test_live_multi_turn_context.py  test_live_role_normalization.py  test_portfolio_summary_endpoint.py  test_portfolio_summary_service.py  test_prompts.py  test_recommendation_reason.py  test_schemas.py  test_scoring.py  test_similarity.py  test_team_embedding_endpoint.py  test_team_embedding_service.py  test_team_embedding_template.py  test_team_fixtures.py  test_team_to_user_endpoints.py  test_team_to_user_expected_matches.py  test_team_to_user_proposal.py  test_team_to_user_recommend.py  test_team_to_user_scoring.py  test_user_intent_service.py  test_user_intent_template.py  test_user_to_team_endpoints.py  test_user_to_team_proposal.py  (+3 more)
(+45 files in other folders)
